[project]
name = "langchain-document-loaders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grandalf>=0.8",
    "groq>=0.30.0",
    "huggingface-hub>=0.34.3",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-groq>=0.3.6",
    "langchain-huggingface>=0.3.1",
    "pydantic[email]>=2.11.7",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.54.1",
]
